Fix IDE inspection warnings